Fix small layout issues and setup dashboard script

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -17,6 +17,9 @@
   Fixes
  */
 
+.userloggedinas .usermenu .usertext .meta {
+  font-size: 0.6rem;
+}
 .dropdown-item a {
   display: block;
   width: 100%;
